Fixing alignment on IE

--- a/prework/css/lab2/restaurantStyles.css
+++ b/prework/css/lab2/restaurantStyles.css
@@ -13,6 +13,7 @@ nav {
   border-bottom: 2px solid #000000;
   font-size: 0.85rem;
   padding: 20px;
+  text-align: left;
 }
 
 nav a {
